# save

ADS1299/: CMakeLists.txt  prj.conf
ADS1299/src/: ads1299.c  ads1299.h  ads1299_reg.h  main.c  spi.c  spi.h
BLE_ADC/: CMakeLists.txt  prj.conf
BLE_ADC/child_image/: hci_rpmsg.conf
BLE_ADC/src/: ble.c  ble.h  ble_data_buf.c  ble_data_buf.h  ble_receive.c  ble_receive.h  ble_send.c  ble_send.h  main.c  saadc.c  saadc.h  timer.c  timer.h
application_manager/: application_manager.py  db_adaptor.py  device.py  main.py  nordic_ble_rate_test.py  readme.md  requirements.txt  test.py
application_manager/db_adaptors/: txt_adaptor.py
application_manager/devices/: example_device.py  ported_device.py  readme.md  sample_device.py  usb_test_device.py
application_manager/devices/nordic_ble/: ble.py  config.py  find_arduino_ports.py  intan_helper.py  nordic_ble.py
application_manager/gui/gui_kivy/: main_app.py  ported_device_custom_panel.py  sample_device_custom_panel.py
application_manager/gui/gui_pyside/: abstract_plot_widget.py  abstract_scrolling_plot_widget.py  main_window.py  ported_device_custom_panel.py  sample_device_custom_panel.py  text_db_config_widget.py
application_manager/gui/gui_pyside/plot_widgets/: gyro_plot_widget.py  scrolling_list_plot_widget.py  scrolling_plot_widget.py  scrolling_single_plot_widget.py
application_manager/guides/: device driver.md
application_manager/utils/: events.py
prebuilt/: NoraRHD.hex  NoraRHS.hex  RHD_ICM_NEW.hex
